--- a/Index.html
+++ b/Index.html
@@ -1,94 +1,28 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fierce Femme Gear | Dark Glow Launch</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0b0b0f;
-      color: #e0b3ff;
-    }
-    header {
-      background-color: #1b0033;
-      padding: 3rem 2rem;
-      text-align: center;
-      box-shadow: 0 0 20px #8000ff;
-    }
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
-      color: #f6e6ff;
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #b380ff;
-    }
-    section.features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      padding: 2rem;
-    }
-    .feature {
-      background: #1e0a35;
-      border-radius: 15px;
-      padding: 1.5rem;
-      box-shadow: 0 0 10px #9900ff;
-    }
-    .feature h3 {
-      color: #e6ccff;
-    }
-    .cta {
-      background-color: #4c0070;
-      padding: 3rem 2rem;
-      text-align: center;
-    }
-    .cta h2 {
-      margin: 0 0 1rem;
-      color: #ffffff;
-    }
-    .cta button {
-      background: #bf00ff;
-      border: none;
-      padding: 1rem 2rem;
-      color: #fff;
-      font-size: 1.1rem;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 0 10px #8000ff;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #1b0033;
-      color: #944dff;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Fierce Femme Gear</h1>
-    <p>Protection. Power. Pink. Enter the Glow.</p>
-  </header>  <section class="features">
-    <div class="feature">
-      <h3>🔒 Stylish Self-Defense</h3>
-      <p>Pink tasers, pepper sprays, and safety tools that mean business — and look bold doing it.</p>
+<div class="min-h-screen bg-black text-white font-sans">
+  <header class="bg-black border-b border-pink-500 p-6">
+    <h1 class="text-4xl font-extrabold text-pink-500 tracking-wide">Fierce Femme Gear</h1>
+    <p class="text-md text-gray-300">Protection, Power & Pink Everything</p>
+  </header>  <section class="p-10 text-center bg-gradient-to-b from-black to-pink-950">
+    <h2 class="text-3xl font-bold text-pink-400 mb-4">Unleash Your Inner Warrior</h2>
+    <p class="text-gray-200 max-w-2xl mx-auto">Feel safe, look fierce. Explore our exclusive line of glam self-defense tools made for bold, beautiful women who own their power.</p>
+    <button class="mt-6 bg-pink-500 text-black px-6 py-3 rounded-2xl font-bold hover:bg-pink-600 shadow-lg">Shop the Collection</button>
+  </section>  <section class="grid grid-cols-1 md:grid-cols-3 gap-6 p-10">
+    <div class="bg-pink-900 rounded-2xl p-6 shadow-xl">
+      <img src="/images/pink-pepper-spray.png" alt="Pink Pepper Spray" class="mx-auto h-40 mb-4">
+      <h3 class="text-xl font-bold text-pink-300">Pepper Spray</h3>
+      <p class="text-sm text-gray-100">Compact, powerful, and perfectly pink. Safety meets style.</p>
     </div>
-    <div class="feature">
-      <h3>👜 Compact & Chic</h3>
-      <p>Designed for the modern femme — fits in any purse, ready for anything.</p>
+    <div class="bg-pink-900 rounded-2xl p-6 shadow-xl">
+      <img src="/images/pink-taser.png" alt="Pink Taser" class="mx-auto h-40 mb-4">
+      <h3 class="text-xl font-bold text-pink-300">Tasers</h3>
+      <p class="text-sm text-gray-100">High-voltage and high-fashion. Stun in more ways than one.</p>
     </div>
-    <div class="feature">
-      <h3>👑 Empowerment in Every Purchase</h3>
-      <p>Each item is crafted to make you feel protected, fierce, and feminine.</p>
+    <div class="bg-pink-900 rounded-2xl p-6 shadow-xl">
+      <img src="/images/pink-alarm.png" alt="Pink Alarm" class="mx-auto h-40 mb-4">
+      <h3 class="text-xl font-bold text-pink-300">Personal Alarms</h3>
+      <p class="text-sm text-gray-100">Loud, proud, and ready to scream for you.</p>
     </div>
-  </section>  <div class="cta">
-    <h2>Launching Soon. Be First to Know.</h2>
-    <button>Join the Waitlist</button>
-  </div>  <footer>
-    &copy; 2025 Fierce Femme Gear. All rights reserved.
+  </section>  <footer class="text-center p-6 border-t border-pink-800 mt-10">
+    <p class="text-sm text-gray-400">© 2025 Fierce Femme Gear. All Rights Reserved.</p>
   </footer>
-</body>
-    </html>
+</div>
